# cmake-conan-sdl2-test

./: CMakeLists.txt  Makefile
src/: main.cpp
